syntax = "proto3";

package users.events;
option java_multiple_files = true;

message UserEvent {
  string userId = 1;
  string name = 2;
  string email = 3;
  string event_type = 4;
}